[tool.poetry]
name = "beancount-forms"
version = "0.1.0"
description = "Library for generating BeanHub's custom forms with a simple web app server capable of rendering and processing forms"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.0"
fastapi = { version = "^0.103.1", optional = true }

[tool.poetry.extras]
server = ["fastapi"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
