[tool.poetry]
name = "beancount-forms"
version = "0.1.0"
description = "Library for generating BeanHub's custom forms"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.0"
pyyaml = "^6.0.1"
wtforms = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
multidict = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
