[tool.poetry]
name = "beanhub-forms"
version = "0.1.3"
description = "Library for generating and processing BeanHub's custom forms"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.0"
pyyaml = "^6.0.1"
wtforms = "^3.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
multidict = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
